--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,108 @@
-* {
-    font-family: 'Roboto', sans-serif;
+*{
+    font-family: 'Roboto', sans-serif;;
     box-sizing: border-box;
 }
-
-body {
-    background-color: #f6f8fc;
+body{
+    
+    background-image: url(../../images/fundo1.jpg);
+    background-attachment:fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 }
-
-.content {
-    width: 100vw;
-    height: 100vh;
+.content{
     padding: 1rem;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.4);
+    
+    
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+.titulo{
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    
 }
+.titulo h1{
+    color: rgb(1, 4, 173);
+}
+@media screen and (min-width: 992px) {
+    .titulo img{
+        height: 1.4rem;  
+    }
+  }
+  @media screen and (max-width: 991px) {
+    .titulo img{
+        height: 1rem;  
+    }
+  }
+
+
+.titulo h5{
+    color: rgb(49, 49, 49);
+    font-size: .6rem;
+}
+
+
+.paginationtop{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+    
+}
+
+.paginationtop button{
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    color: white;
+    padding: .25rem .5rem;
+    font-size: .825rem;
+    margin: .2rem .1rem;
+}
+
+.pesquisa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.pesquisa button{
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    color: white;
+    padding: .25rem .5rem;
+    font-size: .825rem;
+    margin-left: .8rem;
+    margin-top: .2rem;
+    margin-bottom: .3rem;
+}
+@media screen and (min-width: 992px) {
+    .content{
+       max-width: 992px;
+       height: auto;
+       margin: 1rem auto;
+       border-radius: 1rem;
+    }
+  }
+  .pagination{
+    margin-bottom: 1.5rem;
+  }
+  body{
+    position: relative;
+    min-height: 100vh;
+  }
+  #footer {
+    display: flex;
+    justify-content: center;
+    color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.7rem;            /* altura do rodapé */
+  }
