--- a/assets/css/poke-detail.css
+++ b/assets/css/poke-detail.css
@@ -13,10 +13,10 @@
 }
 .voltar{
     color: white;
-    margin: .5rem .9rem;
+    margin: 0rem 1rem;
     margin-bottom: 0;
-    padding-top: .1rem;
-    padding-bottom: 1rem;
+    padding-top: 0rem;
+    padding-bottom: .1rem;
     font-size: 1.5rem;
 }
 
@@ -31,7 +31,7 @@
     color: white;
     margin-bottom: .25rem;
     text-transform: capitalize;
-    font-size: 1.2rem;
+    font-size: 1.9rem;
 
 }
 
